# real-concern

./: .gitignore  LICENSE  README.md  glossary.md  pyproject.toml  resources.md
app/: app.css  app.js  index.html
line-app/: app.css  app.js  app.py  index.html  off.sh  on.sh
line-app/static/: app.js  credits.md  snap-app.js  snap-style.css  style.css
line-app/templates/: index.html  snap.html
